<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/img_item_detail"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_judul_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/judul"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_item_detail"
        app:layout_constraintTop_toTopOf="@+id/img_item_detail" />

    <TextView
        android:id="@+id/tv_judul_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/content_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_judul_label"
        app:layout_constraintStart_toStartOf="@+id/tv_judul_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_judul_label" />

    <TextView
        android:id="@+id/tv_rating_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/rating"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_judul_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_judul_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_judul_detail" />

    <TextView
        android:id="@+id/tv_rating_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/number_rating"
        app:layout_constraintEnd_toEndOf="@+id/tv_rating_label"
        app:layout_constraintStart_toStartOf="@+id/tv_rating_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating_label" />

    <TextView
        android:id="@+id/tv_category_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/category"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_rating_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_rating_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating_detail" />

    <TextView
        android:id="@+id/tv_category_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/category_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_category_label"
        app:layout_constraintStart_toStartOf="@+id/tv_category_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_category_label" />

    <TextView
        android:id="@+id/tv_overview_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/overview"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_category_detail"
        app:layout_constraintStart_toStartOf="@+id/img_item_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_category_detail" />

    <TextView
        android:id="@+id/tv_overview_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="@+id/tv_overview_label"
        app:layout_constraintStart_toStartOf="@+id/tv_overview_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_overview_label" />
</androidx.constraintlayout.widget.ConstraintLayout>